# bioquik

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  MODULES.md  README.md  changelog.md  pyproject.toml  requirements.txt  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test_with_coverage.yml
benchmarks/: generate_fixtures.py  naive.py  run.py
benchmarks/fixtures/: .gitignore  medium.fasta  small.fasta  tiny.fasta
docs/: requirements.txt
docs/source/: architecture.md  benchmarks.md  conf.py  index.md  quickstart.md  reports.md  validation.md
docs/source/api/: modules.rst
src/bioquik/: __init__.py  cli.py  fasta_worker.py  fmindex.py  motifs.py  plotter.py  processor.py  reports.py  validate.py  wavelettree.py
src/sequin/: __init__.py  cli.py  fasta_worker.py
tests/: test_cli.py  test_correctness.py  test_fmindex.py  test_motifs.py  test_plotter.py  test_processor.py  test_reports.py  test_validate.py  test_wavelettree.py
