[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "bioquik"
version = "0.1.0"
description = "an attempt to make biotech faster and easier ;)"
authors = [
  { name = "Rajkanwar Singh", email = "rajkanwars15@outlook.com" }
]

[tool.hatch.build.targets.wheel]
packages = ["src/bioquik"]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.2",
  "tqdm>=4.66",
  "pydivsufsort>=0.0.18",
  "typer[all]>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov",
  "ruff",
  "pre-commit"
]

[project.scripts]
bioquik = "bioquik.cli:app"